add appstore link

--- a/app/index.html
+++ b/app/index.html
@@ -52,7 +52,7 @@
 
                         <div class="header-content-inner">
                             <h1>Receive instant alerts about the crypto currencies exchange rate.</h1>
-                            <a href="#download" class="btn btn-outline btn-xl">Download the app</a>
+                            <a href="https://itunes.apple.com/us/app/cryptohub-real-time-alerts/id1254122876" class="btn btn-outline btn-xl">Download the app</a>
                         </div>
                     </div>
                 </div>
